@@ -79,8 +79,9 @@ AUTHOR
     Michal Josef Špaček skim@cpan.org.
 
 LICENSE AND COPYRIGHT
-     © 2011-2016 Michal Josef Špaček
-     BSD 2-Clause License
+    © 2011-2016 Michal Josef Špaček
+
+    BSD 2-Clause License
 
 VERSION
     0.03
