@@ -250,8 +250,9 @@ Michal Josef Špaček L<skim@cpan.org>.
 
 =head1 LICENSE AND COPYRIGHT
 
- © 2011-2016 Michal Josef Špaček
- BSD 2-Clause License
+© 2011-2016 Michal Josef Špaček
+
+BSD 2-Clause License
 
 =head1 VERSION
 
